<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <com.mxi.goalkeeper.font.MyTextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/post_surveys"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.mxi.goalkeeper.font.MyTextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/post_surveys_details"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/Color_black_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.mxi.goalkeeper.font.MyTextView
                    android:id="@+id/tv_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/calendra" />

                    <com.mxi.goalkeeper.font.MyTextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <com.mxi.goalkeeper.font.MyTextView
                    android:id="@+id/tv_winner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/winner_profile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/Color_black_text" />


                <RadioGroup
                    android:id="@+id/radio_winner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/rb_league"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/good_league"
                        android:textColor="@color/Color_black_text" />

                    <RadioButton
                        android:id="@+id/rb_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_on"
                        android:textColor="@color/Color_black_text" />

                    <RadioButton
                        android:id="@+id/rb_weak_league"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weak_league"
                        android:textColor="@color/Color_black_text" />

                </RadioGroup>

                <com.mxi.goalkeeper.font.MyTextView
                    android:id="@+id/tv_winner_pro_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/winner_profile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/Color_black_text" />


                <RadioGroup
                    android:id="@+id/rg_winner_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/rb_ice_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ice_time"
                        android:textColor="@color/Color_black_text" />

                    <RadioButton
                        android:id="@+id/rb_late_ice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/late_ice"
                        android:textColor="@color/Color_black_text" />

                    <RadioButton
                        android:id="@+id/rb_show_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Didn't show up"
                        android:textColor="@color/Color_black_text" />

                </RadioGroup>

                <com.mxi.goalkeeper.font.MyTextView
                    android:id="@+id/tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:drawableRight="@mipmap/ic_info"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/Color_black_text" />

                <LinearLayout
                    android:id="@+id/radiogroup_winner_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rb_a"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@mipmap/ic_star_red"
                        android:textColor="@color/Color_black_text" />

                    <ImageView
                        android:id="@+id/rb_b"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@mipmap/ic_star_gray"
                        android:textColor="@color/Color_black_text" />

                    <ImageView
                        android:id="@+id/rb_c"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@mipmap/ic_star_gray"
                        android:textColor="@color/Color_black_text" />

                    <ImageView
                        android:id="@+id/rb_d"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@mipmap/ic_star_gray"
                        android:textColor="@color/Color_black_text" />

                    <ImageView
                        android:id="@+id/rb_e"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@mipmap/ic_star_gray"
                        android:textColor="@color/Color_black_text" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <com.mxi.goalkeeper.font.MyButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/sign_in"
                android:text="@string/submit"
                android:textColor="@color/color_white" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
